[gd_scene load_steps=53 format=3 uid="uid://b1wm5yu17o2lt"]

[ext_resource type="Texture2D" uid="uid://dwisol542ba1x" path="res://Sprites/Crash_Bandicoot2.png" id="1_4hxq5"]
[ext_resource type="Script" path="res://Scripts/crash.gd" id="1_d887b"]
[ext_resource type="Texture2D" uid="uid://csesqqael7aov" path="res://Sprites/Crash_Bandicoot.png" id="2_11nwi"]
[ext_resource type="PackedScene" uid="uid://dqna2g3mgbipy" path="res://scenes/damage.tscn" id="2_s5214"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tt816"]
atlas = ExtResource("1_4hxq5")
region = Rect2(33, 320, 37, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t0ik"]
atlas = ExtResource("1_4hxq5")
region = Rect2(72, 320, 37, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0fv4"]
atlas = ExtResource("1_4hxq5")
region = Rect2(111, 320, 37, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1hkt"]
atlas = ExtResource("1_4hxq5")
region = Rect2(150, 320, 37, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5xi8"]
atlas = ExtResource("1_4hxq5")
region = Rect2(189, 320, 37, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsil3"]
atlas = ExtResource("2_11nwi")
region = Rect2(369, 20, 22, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_pipei"]
atlas = ExtResource("1_4hxq5")
region = Rect2(5, 20, 22, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uagj"]
atlas = ExtResource("1_4hxq5")
region = Rect2(31, 20, 22, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_04via"]
atlas = ExtResource("1_4hxq5")
region = Rect2(57, 20, 22, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttabf"]
atlas = ExtResource("1_4hxq5")
region = Rect2(83, 20, 22, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykwkr"]
atlas = ExtResource("1_4hxq5")
region = Rect2(109, 20, 22, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsou4"]
atlas = ExtResource("1_4hxq5")
region = Rect2(135, 20, 22, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gfdo"]
atlas = ExtResource("1_4hxq5")
region = Rect2(161, 20, 22, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_05rk0"]
atlas = ExtResource("1_4hxq5")
region = Rect2(187, 20, 22, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1qq4"]
atlas = ExtResource("1_4hxq5")
region = Rect2(213, 20, 22, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_34dc2"]
atlas = ExtResource("1_4hxq5")
region = Rect2(239, 20, 22, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_oeu7b"]
atlas = ExtResource("1_4hxq5")
region = Rect2(265, 20, 22, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3gnw"]
atlas = ExtResource("1_4hxq5")
region = Rect2(291, 20, 22, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5q5o"]
atlas = ExtResource("1_4hxq5")
region = Rect2(317, 20, 22, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ywqa"]
atlas = ExtResource("1_4hxq5")
region = Rect2(343, 20, 22, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0tv3"]
atlas = ExtResource("1_4hxq5")
region = Rect2(369, 20, 22, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_dslmk"]
atlas = ExtResource("2_11nwi")
region = Rect2(28, 238, 32, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_314bg"]
atlas = ExtResource("2_11nwi")
region = Rect2(62, 238, 32, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_my616"]
atlas = ExtResource("2_11nwi")
region = Rect2(96, 238, 32, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_um74c"]
atlas = ExtResource("2_11nwi")
region = Rect2(130, 238, 32, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3ksh"]
atlas = ExtResource("2_11nwi")
region = Rect2(164, 238, 32, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_03o6a"]
atlas = ExtResource("2_11nwi")
region = Rect2(198, 238, 32, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_5eeye"]
atlas = ExtResource("2_11nwi")
region = Rect2(232, 238, 32, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_mflym"]
atlas = ExtResource("2_11nwi")
region = Rect2(266, 238, 32, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilrhy"]
atlas = ExtResource("1_4hxq5")
region = Rect2(30, 153, 43, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sweh"]
atlas = ExtResource("1_4hxq5")
region = Rect2(76, 153, 43, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_2i3f5"]
atlas = ExtResource("1_4hxq5")
region = Rect2(122, 153, 43, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_vb3yb"]
atlas = ExtResource("1_4hxq5")
region = Rect2(168, 153, 43, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdoqq"]
atlas = ExtResource("1_4hxq5")
region = Rect2(214, 153, 43, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_yal5v"]
atlas = ExtResource("1_4hxq5")
region = Rect2(260, 153, 43, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2tbb"]
atlas = ExtResource("1_4hxq5")
region = Rect2(306, 153, 43, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xv6d"]
atlas = ExtResource("1_4hxq5")
region = Rect2(352, 153, 43, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyib5"]
atlas = ExtResource("2_11nwi")
region = Rect2(96, 76, 41, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkaae"]
atlas = ExtResource("2_11nwi")
region = Rect2(139, 76, 41, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_0avyb"]
atlas = ExtResource("2_11nwi")
region = Rect2(182, 76, 41, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_dr1pu"]
atlas = ExtResource("2_11nwi")
region = Rect2(225, 76, 41, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmrnr"]
atlas = ExtResource("2_11nwi")
region = Rect2(268, 76, 41, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_tunft"]
atlas = ExtResource("2_11nwi")
region = Rect2(311, 76, 41, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xlat"]
atlas = ExtResource("2_11nwi")
region = Rect2(354, 76, 41, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0ay1"]
atlas = ExtResource("2_11nwi")
region = Rect2(397, 76, 41, 44)

[sub_resource type="SpriteFrames" id="SpriteFrames_djuuq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tt816")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t0ik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0fv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1hkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5xi8")
}],
"loop": true,
"name": &"Die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsil3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pipei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uagj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04via")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttabf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykwkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsou4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gfdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05rk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1qq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34dc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oeu7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3gnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5q5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ywqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0tv3")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dslmk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_314bg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_my616")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_um74c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3ksh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03o6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5eeye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mflym")
}],
"loop": true,
"name": &"Jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilrhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sweh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2i3f5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vb3yb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdoqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yal5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2tbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xv6d")
}],
"loop": true,
"name": &"Spin(hit)",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyib5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkaae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0avyb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dr1pu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmrnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tunft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xlat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0ay1")
}],
"loop": true,
"name": &"Walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wgl37"]
radius = 7.25
height = 31.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q6urw"]
radius = 6.0

[node name="CrashBoss" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_d887b")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(0.772727, 0.857143)
sprite_frames = SubResource("SpriteFrames_djuuq")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.54692

[node name="Timer" type="Timer" parent="."]

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 10)
target_position = Vector2(11, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 10)
target_position = Vector2(-12, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.25, 0.5)
shape = SubResource("CapsuleShape2D_wgl37")

[node name="Damage" parent="." instance=ExtResource("2_s5214")]
position = Vector2(-1, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damage"]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_q6urw")

[node name="followright" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(109, -1)
collision_mask = 2

[node name="followleft" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(-109, 0)
collision_mask = 2

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Damage" to="." method="_on_damage_body_entered"]
